# tsumemi

./: .gitignore
mobile/: pyproject.toml
mobile/resources/demo_kifus/: testbranch.kif
mobile/src/tsumemimobile/: __init__.py  __main__.py  app.py  board_widget.py  game_session.py  session.py  speedrun.py
mobile/src/tsumemimobile/screens/: __init__.py  import_screen.py  speedrun_screen.py  stats_screen.py
mobile/src/tsumemimobile/storage/: android_import.py  kifu_storage.py
tsumemi/src/shogi/: basetypes.py
tsumemi/src/shogi/parsing/: kif_reader.py
tsumemi/src/tsumemi/: kif_browser_gui.py  paths.py  skins.py  speedrun_controller.py  speedrun_states.py
tsumemi/src/tsumemi/board_gui/: board_artist.py  board_canvas.py  koma_image_cache.py  komadai_artist.py
tsumemi/src/tsumemi/settings/: display_setting_choices.py  settings_controller.py  settings_window.py
tsumemi/src/tsumemi/views/: main_window_view_controller.py  views.py
tsumemi/test/: test_reader.py
tsumemi/test/test_kifus/: gote_first.kif  gote_first_drop.kif
